# Shacker

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  producer_consumer.h
src/bruteforce/: bruteforce.cpp  bruteforce.h
src/crypto/: sha256.cpp  sha256.h
src/log/: logger.h
src/time/: timer.cpp  timer.h
